--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,3 +28,72 @@ a {
     background: black;
   }
 }
+
+.brick {
+    background-image: url('/images/background3.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/*Portfolio item CSS*/
+.item-container {
+    @apply flex flex-col justify-between w-full space-y-6 mb-4 text-2xl text-white uppercase md:flex-row md:space-y-0 md:space-x-8
+}
+
+.item {
+    @apply relative overflow-hidden md:w-1/3
+}
+
+.item-gradient {
+    @apply absolute top-0 bottom-0 right-0 left-0 bg-gradient-to-b from-transparent to-gray-900 group-hover:from-gray-50 group-hover:to-white group-hover:opacity-70
+}
+
+/*Hamburger time */
+
+.hamburger {
+    cursor:pointer;
+    width:24px;
+    height:24px;
+    transition:all 0.25s;
+    position:relative;
+    }
+
+.hamburger-top,
+.hamburger-middle,
+.hamburger-bottom {
+    position:absolute;
+    width:24px;
+    height:2px;
+    top: 0;
+    left: 0;
+    background: #000000;
+    transform:rotate(0);
+    transition:all 0.5s;
+} 
+
+.hamburger-middle {
+    transform:translateY(7px);
+    }
+
+.hamburger-bottom {
+    transform:translateY(14px);
+    }
+
+.open {
+    transform:rotate(90deg);
+}
+
+.open .hamburger-top{
+    transform:rotate(45deg) translateY(6px) translateX(6px);
+    background-color: white;
+
+}
+
+.open .hamburger-middle{
+    display:none;
+    }
+
+    .open .hamburger-bottom{
+    transform:rotate(-45deg) translateY(6px) translateX(-6px);
+    background-color: white;
+    }
