--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,11 +37,11 @@ a {
 
 /*Portfolio item CSS*/
 .item-container {
-    @apply flex flex-col justify-between w-full space-y-6 mb-4 text-2xl text-white uppercase md:flex-row md:space-y-0 md:space-x-8
+    @apply flex flex-col justify-between w-full mb-4 text-2xl text-white uppercase md:grid md:grid-rows-3 md:grid-flow-col gap-4 md:space-y-0 md:space-x-0
 }
 
 .item {
-    @apply relative overflow-hidden md:w-1/3
+    @apply relative overflow-hidden md:w-64
 }
 
 .item-gradient {
