--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,3 +97,8 @@ a {
     transform:rotate(-45deg) translateY(6px) translateX(-6px);
     background-color: white;
     }
+
+
+.form-item {
+    @apply flex flex-col items-center p-2
+}
